--- a/src/assets/sass/index.sass
+++ b/src/assets/sass/index.sass
@@ -1,6 +1,6 @@
 @import "variables/**/*"
 @import "mixins/**/*"
 @import "vendors/**/*"
-// @import "modules/*"
+@import "modules/*"
 @import "components/**/*"
 @import "pages/**/*"
