--- a/src/assets/sass/modules/modules.sass
+++ b/src/assets/sass/modules/modules.sass
@@ -1,5 +1,5 @@
-@import "~swiper/swiper.scss"
-@import "~tippy.js/dist/tippy.css"
+// @import "~swiper/swiper.scss"
+// @import "~tippy.js/dist/tippy.css"
 // @import "~/slim-select/dist/slimselect.min.css"
 // @import '~/air-datepicker/air-datepicker.css';
 @import "/~@fancyapps/ui/dist/fancybox"
