--- a/src/html/blocks/popups/popup_template.njk
+++ b/src/html/blocks/popups/popup_template.njk
@@ -10,7 +10,7 @@
 			</a>
             <div class="popup-template">
                 <div class="popup-template__icon">
-                    <img src="content/message-icon.svg" alt="">
+                    <!-- <img src="content/message-icon.svg" alt=""> -->
                 </div>
                 <div class="popup-template__title">
                     
