--- a/src/html/pages/main.njk
+++ b/src/html/pages/main.njk
@@ -36,6 +36,9 @@
     <div class="container">
         <section class="js-first-screen js-padding" style="height: 300px;">
         </section>
+        <a href="content/test.jpg" data-fancybox="test">
+            <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="content/test.jpg" alt="">
+        </a>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam nesciunt at molestias atque, ipsa, perferendis omnis ab dolorum autem eius est dolores, sit veritatis error architecto quos!</p>
         <!-- <section class="test">
             <a href="#" data-fancybox="test">Lorem, ipsum.</a>
