--- a/src/html/includes/header.njk
+++ b/src/html/includes/header.njk
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header__wrapper js-fixed">
+    <div class="header__wrapper js-fixed compensate-for-scrollbar">
         <div class="container container--big">
             <div class="header__row">
                 <a href="#" class="header__logo">
