--- a/src/assets/sass/components/animations.sass
+++ b/src/assets/sass/components/animations.sass
@@ -33,7 +33,11 @@
 	20%,
 	40%
 		transform: rotate(10deg)
-
+@keyframes opacity
+	from
+		opacity: 0
+	to
+		opacity: 1
 @keyframes float
 	from
 		transform: translatey(0px)
