--- a/src/html/layouts/_default.njk
+++ b/src/html/layouts/_default.njk
@@ -1,6 +1,6 @@
 {% from 'mixins/bread-crumbs.njk' import breadCrumbsMixin with context %}
 <!doctype html>
-<html lang="ru">
+<html lang="ru" class="internet-explorer">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
