--- a/src/assets/sass/mixins/fluid-mixin.scss
+++ b/src/assets/sass/mixins/fluid-mixin.scss
@@ -13,6 +13,9 @@
 @function pct-s($size, $sizeParent) {
 	@return $size / $sizeParent * 100%;
 }
+@function strip-unit($value) {
+  @return $value / ($value * 0 + 1);
+}
 @mixin fluid-type($mobile-vw, $min-vw, $max-vw, $mobile-font-size, $min-font-size, $max-font-size) {
   $u1: unit($mobile-vw);
   $u2: unit($min-vw);
@@ -36,44 +39,3 @@
     }
   }
 }
-
-
-// @function strip-unit($value) {
-//   @return $value / ($value * 0 + 1);
-// }
-
-// /*
-// * Миксин адаптивного чего угодна)
-// */
-// @mixin fluid-property($property, $mobile-vw, $min-vw, $max-vw, $mobile-value, $min-value, $max-value) {
-//   $u1: unit($mobile-vw);
-//   $u2: unit($min-vw);
-//   $u3: unit($max-vw);
-//   $u4: unit($mobile-value);
-//   $u5: unit($min-value);
-//   $u6: unit($max-value);
-
-//   @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 and $u1 == $u5 and $u1 == $u6 {
-//     & {
-//       #{$property}: $min-value;
-//       @media screen and (min-width: $min-vw) {
-//         #{$property}: calc(#{$min-value} + #{strip-unit($max-value - $min-value)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
-//       }
-//       @media screen and (min-width: $max-vw) {
-//         #{$property}: $max-value;
-//       }
-//       @media (max-width: $mobile-vw) {
-//         #{$property}: $mobile-value;
-//       }
-//     }
-//   } @else {
-//     @warn "All params in `fluid-param` must have one unit";
-//     @warn $u1;
-//     @warn $u2;
-//     @warn $u3;
-//     @warn $u4;
-//     @warn $u5;
-//     @warn $u6;
-//   }
-// }
-
