--- a/src/html/includes/header.njk
+++ b/src/html/includes/header.njk
@@ -11,7 +11,7 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__link">
-                            <button data-href="js-drop" class="_goto">Как арендовать самокат</button>
+                            <button data-href="js-drop" class="js-to-block">Как арендовать самокат</button>
                         </li>
                         <li class="menu__link">
                             <a href="#">Катайтесь с Плюсом</a>
@@ -24,7 +24,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a href="#" class="header__btn btn btn--header btn-effect">
+                <a href="#" class="header__btn btn btn--header js-btn-effect">
                     <span>Скачать</span>
                     <i></i>
                 </a>
