--- a/src/assets/sass/pages/main.sass
+++ b/src/assets/sass/pages/main.sass
@@ -5,7 +5,7 @@ body
 .wrapper
     opacity: 0
     transition: opacity .7s
-    
+
 .test
     position: relative
     width: 500px
@@ -32,7 +32,7 @@ body
         &._show
             display: block
 
-.back-to-top
+.js-back-to-top
     width: 50px
     height: 50px
     border-radius: 50%
@@ -51,23 +51,20 @@ body
         background-color: red
         margin-right: 20px
         display: inline-block
+        &._open
+            background-color: yellow
     &__block
         display: none
         margin: 20px 0 0 0
         &._open
             display: block
 
-.spoller
-    background-color: red
-    display: inline-block
-    margin: 20px 0
-
 .sp-test
     // display: none
     overflow: hidden
     transition: all 1s
 
-.btn-effect
+.js-btn-effect
     width: 200px
     height: 50px
     background-color: red
@@ -92,3 +89,34 @@ body
             i
                 width: 500px
                 height: 500px
+
+.spollers
+    margin: 0 0 3rem 0
+    &__item
+        margin: 0 0 2rem 0
+        &:last-child
+            margin: 0
+    &__trigger
+        background-color: red
+        cursor: pointer
+        padding: 1rem
+        display: inline-block
+
+.big-text
+    font-size: 4rem
+    padding: 4rem
+    background-color: red
+
+.test-drop
+    &._open
+        .test-drop__text
+            display: block
+    &__text
+        display: none
+        padding: 3rem 0
+        background-color: red
+
+.test-fancy
+    img
+        width: 100%
+        height: 100%
