--- a/src/html/includes/header.njk
+++ b/src/html/includes/header.njk
@@ -11,10 +11,13 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__link">
-                            <button data-href="js-drop" class="js-to-block">Как арендовать самокат</button>
+                            <a href="#anchor-test" class="js-to-block">Как арендовать самокат</a>
                         </li>
                         <li class="menu__link">
-                            <a href="#">Катайтесь с Плюсом</a>
+                            <a href="#form" class="js-to-block">Как арендовать самокат</a>
+                        </li>
+                        <li class="menu__link">
+                            <a href="/template.html#anchor-test" target="_blank">Катайтесь с Плюсом</a>
                         </li>
                         <li class="menu__link">
                             <a href="#">Катайтесь аккуратно</a>
