--- a/src/html/pages/index.njk
+++ b/src/html/pages/index.njk
@@ -1,7 +1,7 @@
 {% extends "layouts/_page-list.njk" %}
 
 {% set pages = [
-    {title: 'main', href: 'main.html', desktop: '+', mobile: '+'}
+    {title: 'template', href: 'template.html', desktop: '+', mobile: '+'}
 ] %}
 
 {% block content %}
