--- a/src/assets/sass/components/fix-ie.sass
+++ b/src/assets/sass/components/fix-ie.sass
@@ -14,5 +14,6 @@
         justify-content: center
         align-items: center
         overflow: hidden
-        opacity: 0
-        animation: opacity .3s 1s both
+    .wrapper
+        overflow: hidden
+        height: 100%
