--- a/src/assets/sass/pages/template.sass
+++ b/src/assets/sass/pages/template.sass
@@ -1,10 +1,10 @@
-body
-    &._loaded
-        .wrapper
-            opacity: 1
-.wrapper
-    opacity: 0
-    transition: opacity .7s
+// body
+//     &._loaded
+//         .wrapper
+//             opacity: 1
+// .wrapper
+//     opacity: 0
+//     transition: opacity .7s
 
 .test
     position: relative
@@ -120,3 +120,13 @@ body
     img
         width: 100%
         height: 100%
+
+.test-parallax
+    perspective: 400px
+    transform-style: preserve-3d
+    perspective-origin: 200% 200%
+    text-align: center
+.test-sp
+    padding: 2rem
+    p
+        margin: 0 0 2rem 0
