--- a/src/html/includes/header.njk
+++ b/src/html/includes/header.njk
@@ -1,9 +1,9 @@
-<header class="header">
+<header class="header js-header">
     <div class="header__wrapper js-fixed compensate-for-scrollbar">
         <div class="container container--big">
             <div class="header__row">
                 <a href="#" class="header__logo">
-                    
+                    Logo
                 </a>
                 <button type="button" class="burger" data-init="1023">
 
@@ -11,19 +11,16 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__link">
-                            <a href="#anchor-test" class="js-to-block">Как арендовать самокат</a>
+                            <a href="#anchor-tabs" class="js-to-block">Табы</a>
                         </li>
                         <li class="menu__link">
-                            <a href="#form" class="js-to-block">Как арендовать самокат</a>
+                            <a href="#anchor-form" class="js-to-block">Форма</a>
                         </li>
                         <li class="menu__link">
-                            <a href="template.html#anchor-test" target="_blank">Катайтесь с Плюсом</a>
+                            <a href="#anchor-footer" class="js-to-block">Футер</a>
                         </li>
                         <li class="menu__link">
-                            <a href="#">Катайтесь аккуратно</a>
-                        </li>
-                        <li class="menu__link">
-                            <a href="#">Где самокаты?</a>
+                            <a href="template.html#anchor-tabs" target="_blank">Триггер на новую страницу до блока табов</a>
                         </li>
                     </ul>
                 </nav>
