--- a/src/assets/sass/components/header.sass
+++ b/src/assets/sass/components/header.sass
@@ -26,13 +26,9 @@
         position: relative
         z-index: 2
         transition: transform $trTime
+        border: solid .1rem $colorWhite
         @media (min-width: 768px)
             width: 15.8rem
-        &:hover
-            transform: scale(1.05)
-        img,svg
-            width: 100%
-            height: 100%
 
     &__btn
         margin: 0 0 0 1.5rem
