--- a/src/assets/sass/pages/template.sass
+++ b/src/assets/sass/pages/template.sass
@@ -36,7 +36,7 @@
     width: 50px
     height: 50px
     border-radius: 50%
-    background-color: red
+    background-color: green
     position: fixed
     bottom: 50px
     right: 10px
@@ -130,3 +130,29 @@
     padding: 2rem
     p
         margin: 0 0 2rem 0
+
+.popup-template
+    max-width: 50rem
+    width: 100%
+    display: none
+.title-page
+    text-align: center
+    font-weight: 500
+    margin: 0 0 3rem 0
+    font-size: 2rem
+    @media (min-width: 768px)
+        font-size: 3rem
+.test-fetch
+
+    &__row
+        display: flex
+        flex-wrap: wrap
+        margin: -2rem
+    &__item
+        width: 33.333%
+        padding: 2rem
+    &__name
+        font-size: 2rem
+    &__email
+        font-size: 1.8rem
+        color: blue
