--- a/src/html/layouts/_default.njk
+++ b/src/html/layouts/_default.njk
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content=""/>
     <meta property="og:description" content=""/>
     <meta property="og:image" content=""/>
@@ -23,8 +23,8 @@
             {% block content %}{% endblock %}
         </main>
         {% include 'includes/footer.njk' %}
-
         {% include 'blocks/popups/popup_template.njk' %}
+        {% include 'blocks/popups/popup.njk' %}
     </div>
     <script>
         let ua = window.navigator.userAgent;
