--- a/src/assets/sass/pages/template.sass
+++ b/src/assets/sass/pages/template.sass
@@ -149,10 +149,17 @@
         flex-wrap: wrap
         margin: -2rem
     &__item
-        width: 33.333%
+        width: 20%
         padding: 2rem
+        line-height: 1.5
     &__name
         font-size: 2rem
     &__email
-        font-size: 1.8rem
         color: blue
+
+.test-timeout
+    width: 5rem
+    height: 5rem
+    background-color: red
+    &._active
+        transform: translateX(200px)
