--- a/src/html/pages/template.njk
+++ b/src/html/pages/template.njk
@@ -135,9 +135,31 @@
     </div>
     <div class="title-page">Кастомное дроп меню</div>
     <div class="test-drop">
-        <div class="js-drop">drop</div>
-        <div class="test-drop__text">
-            Дроп пахает
+        <div class="test-drop__row">
+            <div class="test-drop__item">
+                <a href="#" class="test-drop__trigger js-drop">
+                    <span>drop</span>
+                </a>
+                <div class="test-drop__text">
+                    Дроп пахает
+                </div>
+            </div>
+            <div class="test-drop__item">
+                <button type="button" class="test-drop__trigger js-drop">
+                    <span>drop</span>
+                </button>
+                <div class="test-drop__text">
+                    Дроп пахает
+                </div>
+            </div>
+            <div class="test-drop__item">
+                <div class="test-drop__trigger js-drop">
+                    <span>drop</span>
+                </div>
+                <div class="test-drop__text">
+                    Дроп пахает
+                </div>
+            </div>
         </div>
     </div>
     <div class="title-page">Всплывающий блок по скроллу</div>
