--- a/src/html/layouts/_default.njk
+++ b/src/html/layouts/_default.njk
@@ -16,6 +16,9 @@
     <link rel="shortcut icon" href="">
 </head>
 <body>
+    <div class="preloader-page">
+        <span>Загрузка...</span>
+    </div>
     <div class="wrapper">
         {% include 'includes/header.njk' %}
         {{ breadCrumbsMixin(breadCrumbs, breadBackButton) }}
