--- a/src/html/includes/header.njk
+++ b/src/html/includes/header.njk
@@ -1,6 +1,6 @@
 <header class="header js-header">
     <div class="header__wrapper js-fixed compensate-for-scrollbar">
-        <div class="container container--big">
+        <div class="container">
             <div class="header__row">
                 <a href="#" class="header__logo">
                     Logo
