--- a/src/assets/sass/components/form.sass
+++ b/src/assets/sass/components/form.sass
@@ -10,8 +10,8 @@
         height: 5rem
         max-width: 20rem
         width: 100%
-        background-color: $colorBlack
-        color: $colorWhite
+        background-color: $cBlack
+        color: $cWhite
         &._inactive-submit
             pointer-events: none
             background-color: gray
@@ -25,7 +25,7 @@
         height: 100%
         position: relative
         z-index: 1
-        border: solid .1rem $colorBlack
+        border: solid .1rem $cBlack
         height: 4rem
         padding: 0 1rem
         transition: border-color .3s
