--- a/src/assets/sass/pages/template.sass
+++ b/src/assets/sass/pages/template.sass
@@ -126,7 +126,7 @@
         display: inline-flex
         justify-content: center
         align-items: center
-        border: solid .2rem $colorBlack
+        border: solid .2rem $cBlack
         cursor: pointer
     &__text
         padding: 3rem 1rem
@@ -136,7 +136,7 @@
         top: calc( 100% + 0.1rem )
         left: 0
         width: 100%
-        color: $colorWhite
+        color: $cWhite
 
         opacity: 0
         transform: scaleY(0)
