--- a/src/assets/sass/variables/variables.sass
+++ b/src/assets/sass/variables/variables.sass
@@ -2,19 +2,9 @@
 $ff-default: 'Roboto', sans-serif
 
 //colors
-$colorBlack: #000
-$colorWhite: #fff
-$cBlack: #21201f
+$cBlack: #000
 $cWhite: #fff
 $cBg: #ffde40
 
 //transition
 $trTime: .3s
-
-
-// $mq-breakpoints: (mobile: 376px, mobileLandscape: 480px, tablet: 769px, desktop: 1024px, widescreen: 1250px, large: 1441px, hd: 1921px)
-
-// $mq-media-type: screen
-
-// // Show active breakpoint in top right corner of viewport
-// $mq-show-breakpoints: (mobile, mobileLandscape, tablet, desktop, widescreen, large, hd)
