--- a/src/html/pages/template.njk
+++ b/src/html/pages/template.njk
@@ -13,6 +13,31 @@
         <div class="js-line-clamp" data-line="2">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi molestias blanditiis numquam dolores temporibus animi voluptatem, repudiandae illum sapiente ipsa aspernatur assumenda cupiditate dolore molestiae aliquid eum, illo rem doloribus deleniti aliquam ducimus saepe unde. Repellendus vitae quibusdam nesciunt, et sed rerum quos ad non aliquid. Deserunt voluptates adipisci odit assumenda cum illo sequi obcaecati officiis perferendis debitis eligendi, nam non voluptatibus est cupiditate facilis suscipit consequuntur rerum corporis quae, laborum vel laudantium atque ipsa. Numquam reprehenderit quidem consequatur! Temporibus, numquam. Voluptas, perspiciatis ipsam fugit nihil incidunt vitae, sit, iure eos laboriosam necessitatibus maxime ducimus vero vel cupiditate sequi velit.
         </div>
+        <div class="tester">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, optio!
+        </div>
+        <div class="intro">
+            <div class="intro__row fl fl-wrap fl-column fl-center">
+                <div class="intro__column w-25">
+                    <div class="intro__item">1</div>
+                </div>
+                <div class="intro__column w-25">
+                    <div class="intro__item">2</div>
+                </div>
+                <div class="intro__column w-25">
+                    <div class="intro__item">3</div>
+                </div>
+                <div class="intro__column w-25">
+                    <div class="intro__item">1</div>
+                </div>
+                <div class="intro__column w-25">
+                    <div class="intro__item">2</div>
+                </div>
+                <div class="intro__column w-25">
+                    <div class="intro__item">3</div>
+                </div>
+            </div>
+        </div>
     </section>
     <div class="title-page">Таймаут js</div>
     <div class="test-timeout" data-time="3000"></div>
