--- a/src/assets/sass/components/header.sass
+++ b/src/assets/sass/components/header.sass
@@ -26,7 +26,7 @@
         position: relative
         z-index: 2
         transition: transform $trTime
-        border: solid .1rem $colorWhite
+        border: solid .1rem $cWhite
         @media (min-width: 768px)
             width: 15.8rem
 
