--- a/src/assets/sass/components/ui-kit.sass
+++ b/src/assets/sass/components/ui-kit.sass
@@ -43,3 +43,16 @@
         left: $zero
         width: $value
         height: $value
+
+
+.ui-kit
+    background-color: #000
+
+.link
+    display: inline-flex
+    align-items: center
+    color: white
+    &:hover
+        color: #FF4061
+    &:active
+        color: #CA0023
