--- a/src/assets/sass/index.sass
+++ b/src/assets/sass/index.sass
@@ -2,5 +2,7 @@
 @import "mixins/**/*"
 @import "vendors/**/*"
 @import "modules/*"
-@import "components/**/*"
+@import "ui-kit/**/*"
 @import "pages/**/*"
+@import "components/**/*"
+@import "blocks/**/*"
