--- a/src/assets/sass/modules/modules.sass
+++ b/src/assets/sass/modules/modules.sass
@@ -1,6 +1,6 @@
 // @import "~swiper/swiper.scss"
 // @import "~tippy.js/dist/tippy.css"
-// @import "~/slim-select/dist/slimselect.min.css"
+@import "~slim-select/dist/slimselect";
 // @import '~/air-datepicker/air-datepicker.css';
 @import "/~@fancyapps/ui/dist/fancybox"
 // @import '../../../../node_modules/@fancyapps/ui/dist/fancybox';
