--- a/src/html/includes/popups.njk
+++ b/src/html/includes/popups.njk
@@ -3,9 +3,7 @@
         <h2>
             popup-1
         </h2>
-        <button type="button" data-popup data-src="#popup-2" data-fancybox="popupThree" onclick="Fancybox.close()">
-            Open popup 2
-        </button>
+        <a href="#popup-2" class="btn js-popup-trigger" data-fancybox="popup-2">popup-2</a>
     </div>
 </div>
 <div id="popup-2" class="popup-template">
