--- a/src/html/pages/index.njk
+++ b/src/html/pages/index.njk
@@ -1,7 +1,8 @@
 {% extends "layouts/_page-list.njk" %}
 
 {% set pages = [
-    {title: 'template', href: 'template.html', desktop: '+', mobile: '+'}
+    {title: 'template', href: 'template.html', desktop: '+', mobile: '+'},
+    {title: 'ui-kit', href: 'ui-kit.html', desktop: '+', mobile: '+'}
 ] %}
 
 {% block content %}
