--- a/src/html/includes/header.njk
+++ b/src/html/includes/header.njk
@@ -2,13 +2,13 @@
     <div class="header__wrapper js-fixed compensate-for-scrollbar">
         <div class="container">
             <div class="header__row">
-                <a href="#" class="header__logo">
+                <a href="#anchor-wrapper" class="header__logo">
                     Logo
                 </a>
-                <button type="button" class="burger" data-init="1023">
+                <button type="button" class="burger js-burger" data-init="1023">
 
                 </button>
-                <nav class="menu">
+                <nav class="menu js-menu">
                     <ul class="menu__list">
                         <li class="menu__link">
                             <a href="#anchor-tabs" class="js-to-block">Табы</a>
