--- a/src/html/layouts/_default.njk
+++ b/src/html/layouts/_default.njk
@@ -19,7 +19,7 @@
     <div class="preloader-page">
         <span>Загрузка...</span>
     </div>
-    <div class="wrapper">
+    <div id="anchor-wrapper" class="wrapper">
         {% include 'includes/header.njk' %}
         {{ breadCrumbsMixin(breadCrumbs, breadBackButton) }}
         <main class="page">
