--- a/src/html/pages/template.njk
+++ b/src/html/pages/template.njk
@@ -88,7 +88,7 @@
             <path d="M213.098 279.972L250.679 334.521C251.603 335.863 253.658 335.596 254.208 334.063L327.049 131.195" stroke="#343779" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
     </div>
-    <div class="title-page anchor-form">Форма</div>
+    <div id="anchor-form" class="title-page">Форма</div>
     <form action="#" method="POST" class="form js-form">
         <div class="form__item">
             <label class="input-form">
@@ -148,7 +148,7 @@
             <div style="display: none;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, voluptatem.</div>
         </div>
     </section>
-    <div class="title-page anchor-tabs">Табы</div>
+    <div id="anchor-tabs" class="title-page">Табы</div>
     <section class="js-tabs">
         <div class="js-tabs__trigger">tab-1</div>
         <div class="js-tabs__trigger _open">tab-2</div>
@@ -211,7 +211,7 @@
     <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
     <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
     <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
-    <a href="#wrapper" class="js-to-block js-back-to-top"></a>
+    <a href="#anchor-wrapper" class="js-to-block js-back-to-top"></a>
     <div class="preloader"></div>
     <div class="message">Ошибка запроса. повторите попытку позже</div>
 </div>
