--- a/src/html/includes/footer.njk
+++ b/src/html/includes/footer.njk
@@ -1,3 +1,3 @@
-<footer class="footer anchor-footer">
+<footer id="anchor-footer" class="footer">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque error obcaecati at dignissimos iusto natus aperiam. Optio cupiditate maiores fuga.
 </footer>
