--- a/src/assets/sass/ui-kit/ui-kit.sass
+++ b/src/assets/sass/ui-kit/ui-kit.sass
@@ -2,36 +2,84 @@
     display: inline-flex
     justify-content: center
     align-items: center
-.item-center
-    position: absolute
-    top: 50%
-    left: 50%
-    transform: translate(-50%,-50)
-.item-responsive
-    img,svg
-        position: absolute
-        top: 0
-        left: 0
-        width: 100%
-        height: 100%
-.upcase
-    text-transform: uppercase
 .fl
     display: flex
+
+    &--auto
+        flex: 1 1 auto
+
     &--wrap
         flex-wrap: wrap
+
     &--center
         justify-content: center
         align-items: center
+
     &--center-vert
         align-items: center
+
     &--center-hor
         justify-content: center
+
+    &--end-vert
+        align-items: flex-end
+
+    &--start-vert
+        align-items: flex-start
+
     &--between
         justify-content: space-between
+
     &--column
         flex-direction: column
+
+    &--inline
+        display: inline-flex
+
     &--not-mobile
         display: block
+
         @media (min-width: 768px)
             display: flex
+
+    &--mobile
+        display: flex
+
+        @media (min-width: 768px)
+            display: block
+
+.abs
+    $zero: 0
+    position: absolute
+    top: $zero
+    left: $zero
+.abs-center
+    $value: 50%
+    position: absolute
+    top: $value
+    left: $value
+    transform: translate(-$value,-$value)
+.wh
+    $value: 100%
+    width: $value
+    height: $value
+.w-50
+    width: 50%
+.w-33
+    width: 33.333%
+.w-25
+    width: 25%
+.w-20
+    width: 20%
+.item-response
+    img,svg
+        $zero: 0
+        $value: 100%
+        position: absolute
+        top: $zero
+        left: $zero
+        width: $value
+        height: $value
+.js-to-block
+    &._active
+        color: red
