--- a/src/html/pages/template.njk
+++ b/src/html/pages/template.njk
@@ -10,9 +10,6 @@
 <div class="container">
     <section class="js-first-screen">
         <div class="title-page">Отступ от шапки</div>
-        <div class="js-line-clamp" data-line="2">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi molestias blanditiis numquam dolores temporibus animi voluptatem, repudiandae illum sapiente ipsa aspernatur assumenda cupiditate dolore molestiae aliquid eum, illo rem doloribus deleniti aliquam ducimus saepe unde. Repellendus vitae quibusdam nesciunt, et sed rerum quos ad non aliquid. Deserunt voluptates adipisci odit assumenda cum illo sequi obcaecati officiis perferendis debitis eligendi, nam non voluptatibus est cupiditate facilis suscipit consequuntur rerum corporis quae, laborum vel laudantium atque ipsa. Numquam reprehenderit quidem consequatur! Temporibus, numquam. Voluptas, perspiciatis ipsam fugit nihil incidunt vitae, sit, iure eos laboriosam necessitatibus maxime ducimus vero vel cupiditate sequi velit.
-        </div>
         <div class="tester">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, optio!
         </div>
@@ -35,7 +32,7 @@
             </div>
         </div>
         <div class="intro">
-            <div class="intro__row fl fl-wrap fl-column fl-center">
+            <div class="intro__row fl fl--wrap">
                 <div class="intro__column w-25">
                     <div class="intro__item">1</div>
                 </div>
@@ -207,7 +204,7 @@
     </div>
     <div class="title-page">Всплывающий блок по скроллу</div>
     <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
-    <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
+    <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
     <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
     <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
     <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
