--- a/src/assets/sass/index.sass
+++ b/src/assets/sass/index.sass
@@ -1,8 +1,9 @@
 @import "variables/**/*"
 @import "mixins/**/*"
+@import "typography/*"
 @import "vendors/**/*"
 @import "modules/*"
 @import "ui-kit/**/*"
-@import "pages/**/*"
 @import "components/**/*"
+@import "pages/**/*"
 @import "blocks/**/*"
