--- a/src/assets/sass/pages/template.sass
+++ b/src/assets/sass/pages/template.sass
@@ -252,3 +252,22 @@
     transform: rotate(0deg)
   to
     transform: rotate(360deg)
+
+
+.progress
+  position: fixed
+  bottom: 0
+  left: 0
+  width: 100%
+  height: 2rem
+  background-color: red
+  z-index: 10
+  &__line
+    position: absolute
+    height: 100%
+    background-color: #000
+    transition: width .1s linear
+    display: flex
+    justify-content: center
+    align-items: center
+    color: #fff
