--- a/src/html/includes/header.njk
+++ b/src/html/includes/header.njk
@@ -1,5 +1,5 @@
 <header class="header js-header">
-  <div class="header__wrapper js-fixed compensate-for-scrollbar">
+  <div class="header__wrapper js-fixed compensate-for-scrollbar js-lp">
     <div class="container">
       <div class="header__row">
         <a href="#anchor-wrapper" class="header__logo">
