--- a/src/html/pages/template.njk
+++ b/src/html/pages/template.njk
@@ -188,15 +188,7 @@ link: '#'
   <div class="test-drop">
     <div class="test-drop__row">
       <div class="test-drop__item">
-        <a href="#" class="test-drop__trigger js-drop">
-          <span>drop</span>
-        </a>
-        <div class="test-drop__text">
-          Дроп пахает
-        </div>
-      </div>
-      <div class="test-drop__item">
-        <button type="button" class="test-drop__trigger js-drop">
+        <button type="button" class="test-drop__trigger js-drop" data-init="1024">
           <span>drop</span>
         </button>
         <div class="test-drop__text">
@@ -204,7 +196,15 @@ link: '#'
         </div>
       </div>
       <div class="test-drop__item">
-        <div class="test-drop__trigger js-drop">
+        <button type="button" class="test-drop__trigger js-drop" data-init="1064">
+          <span>drop</span>
+        </button>
+        <div class="test-drop__text">
+          Дроп пахает
+        </div>
+      </div>
+      <div class="test-drop__item">
+        <div class="test-drop__trigger js-drop" data-init="1094">
           <span>drop</span>
         </div>
         <div class="test-drop__text">
@@ -218,7 +218,7 @@ link: '#'
   <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
   <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
   <div class="big-text js-anim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi illo omnis dolorum dolores ipsa excepturi, neque reiciendis natus hic atque.</div>
-  <a href="#anchor-wrapper" class="js-to-block js-back-to-top"></a>
+  <!-- <a href="#anchor-wrapper" class="js-to-block js-back-to-top"></a> -->
   <div class="preloader"></div>
   <div class="message">Ошибка запроса. повторите попытку позже</div>
 </div>
