--- a/src/assets/sass/components/animations.sass
+++ b/src/assets/sass/components/animations.sass
@@ -18,7 +18,7 @@
 		transition-delay: .2s
 	&--d-04
 		transition-delay: .4s
-	&._show
+	&._is-show
 		transform: translate($zero, $zero)
 		opacity: 1
 
